--- a/mlir-hs-0.1.0.0/MLIR-AST-Dialect-Vector.html
+++ b/mlir-hs-0.1.0.0/MLIR-AST-Dialect-Vector.html
@@ -809,60 +809,82 @@ vector.transfer_write %4, %arg1[%c3, %c3]
 </pre><p>Example:</p><pre>%A  = memref.alloc() : memref&lt;5x4x3xf32&gt;
 %VA = vector.type_cast %A : memref&lt;5x4x3xf32&gt; to memref&lt;vector&lt;5x4x3xf32&gt;&gt;
 </pre></div><div class="top"><p class="src"><span class="keyword">pattern</span> <a id="v:TypeCast" class="def">TypeCast</a> :: <a href="MLIR-AST.html#t:Location" title="MLIR.AST">Location</a> -&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; operand -&gt; <a href="MLIR-AST.html#t:AbstractOperation" title="MLIR.AST">AbstractOperation</a> operand <a href="src/MLIR.AST.Dialect.Generated.Vector.html#TypeCast" class="link">Source</a> <a href="#v:TypeCast" class="selflink">#</a></p><div class="doc"><p>A pattern for <code>vector.type_cast</code>.</p></div></div><div class="top"><p class="src"><a id="v:type_cast" class="def">type_cast</a> :: <a href="MLIR-AST-Builder.html#t:MonadBlockBuilder" title="MLIR.AST.Builder">MonadBlockBuilder</a> m =&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; m <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> <a href="src/MLIR.AST.Dialect.Generated.Vector.html#type_cast" class="link">Source</a> <a href="#v:type_cast" class="selflink">#</a></p><div class="doc"><p>A builder for <code>vector.type_cast</code>.</p></div></div><a href="#g:39" id="g:39"><h1>warp_execute_on_lane_0</h1></a><div class="doc"><p><code>warp_execute_on_lane_0</code> is an operation used to bridge the gap between
- vector programming and GPU SIMT programming model. It allows to trivially
- convert a region of vector code meant to run on a GPU warp into a valid SIMT
- region and then allows incremental transformation to distribute vector
- operations on the SIMT lane.</p><p>Any code present in the region would only be executed on first lane
+ vector programming and SPMD programming model like GPU SIMT. It allows to
+ trivially convert a region of vector code meant to run on a multiple threads
+ into a valid SPMD region and then allows incremental transformation to
+ distribute vector operations on the threads.</p><p>Any code present in the region would only be executed on first thread/lane
  based on the <code>laneid</code> operand. The <code>laneid</code> operand is an integer ID between
  [0, <code>warp_size</code>). The <code>warp_size</code> attribute indicates the number of lanes in
  a warp.</p><p>Operands are vector values distributed on all lanes that may be used by
  the single lane execution. The matching region argument is a vector of all
  the values of those lanes available to the single active lane. The
  distributed dimension is implicit based on the shape of the operand and
- argument. In the future this may be described by an affine map.</p><p>Return values are distributed on all lanes using laneId as index. The
+ argument. the properties of the distribution may be described by extra
+ attributes (e.g. affine map).</p><p>Return values are distributed on all lanes using laneId as index. The
  vector is distributed based on the shape ratio between the vector type of
  the yield and the result type.
  If the shapes are the same this means the value is broadcasted to all lanes.
  In the future the distribution can be made more explicit using affine_maps
  and will support having multiple Ids.</p><p>Therefore the <code>warp_execute_on_lane_0</code> operations allow to implicitly copy
  between lane0 and the lanes of the warp. When distributing a vector
- from lane0 to all the lanes, the data are distributed in a block cyclic way.</p><p>During lowering values passed as operands and return value need to be
+ from lane0 to all the lanes, the data are distributed in a block cyclic way.
+ For exemple <code>vector&lt;64xf32&gt;</code> gets distributed on 32 threads and map to
+ <code>vector&lt;2xf32&gt;</code> where thread 0 contains vector[0] and vector[1].</p><p>During lowering values passed as operands and return value need to be
  visible to different lanes within the warp. This would usually be done by
  going through memory.</p><p>The region is *not* isolated from above. For values coming from the parent
  region not going through operands only the lane 0 value will be accesible so
  it generally only make sense for uniform values.</p><p>Example:
  <code>
+ /<em> Execute in parallel on all threads</em>lanes.
  vector.warp_execute_on_lane_0 (%laneid)[32] {
+   /<em> Serial code running only on thread</em>lane 0.
    ...
  }
+ /<em> Execute in parallel on all threads</em>lanes.
  </code></p><p>This may be lowered to an scf.if region as below:
  <code>
+   /<em> Execute in parallel on all threads</em>lanes.
    %cnd = arith.cmpi eq, %laneid, %c0 : index
    scf.if %cnd {
-      ...
+     /<em> Serial code running only on thread</em>lane 0.
+     ...
    }
+   /<em> Execute in parallel on all threads</em>lanes.
  </code></p><p>When the region has operands and/or return values:
  <code>
+ /<em> Execute in parallel on all threads</em>lanes.
  %0 = vector.warp_execute_on_lane_0(%laneid)[32]
  args(%v0 : vector&lt;4xi32&gt;) -&gt; (vector&lt;1xf32&gt;) {
  ^bb0(%arg0 : vector&lt;128xi32&gt;) :
+   /<em> Serial code running only on thread</em>lane 0.
    ...
    vector.yield %1 : vector&lt;32xf32&gt;
  }
+ /<em> Execute in parallel on all threads</em>lanes.
  </code></p><p>values at the region boundary would go through memory:
  <code>
- %tmp0 = memreg.alloc() : memref&lt;32xf32, 3&gt;
- %tmp1 = memreg.alloc() : memref&lt;32xf32, 3&gt;
+ /<em> Execute in parallel on all threads</em>lanes.
+ ...
+ // Store the data from each thread into memory and Synchronization.
+ %tmp0 = memreg.alloc() : memref&lt;128xf32&gt;
+ %tmp1 = memreg.alloc() : memref&lt;32xf32&gt;
  %cnd = arith.cmpi eq, %laneid, %c0 : index
- vector.store %v0, %tmp0[%laneid] : memref&lt;32xf32&gt;, vector&lt;1xf32&gt;
- warp_sync
+ vector.store %v0, %tmp0[%laneid] : memref&lt;128xf32&gt;, vector&lt;4xf32&gt;
+ some_synchronization_primitive
  scf.if %cnd {
-   %arg0 = vector.load %tmp0[%c0] : memref&lt;32xf32&gt;, vector&lt;32xf32&gt;
+   // Serialized code running only on thread 0.
+   // Load the data from all the threads into a register from thread 0. This
+   // allow threads 0 to access data from all the threads.
+   %arg0 = vector.load %tmp0[%c0] : memref&lt;128xf32&gt;, vector&lt;128xf32&gt;
    ...
+   // Store the data from thread 0 into memory.
    vector.store %1, %tmp1[%c0] : memref&lt;32xf32&gt;, vector&lt;32xf32&gt;
  }
- warp_sync
+ // Synchronization and load the data in a block cyclic way so that the
+ // vector is distributed on all threads.
+ some_synchronization_primitive
  %0 = vector.load %tmp1[%laneid] : memref&lt;32xf32&gt;, vector&lt;32xf32&gt;
+ /<em> Execute in parallel on all threads</em>lanes.
  </code></p></div><div class="top"><p class="src"><a id="v:warp_execute_on_lane_0" class="def">warp_execute_on_lane_0</a> :: <a href="MLIR-AST-Builder.html#t:MonadBlockBuilder" title="MLIR.AST.Builder">MonadBlockBuilder</a> m =&gt; [<a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a>] -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; [<a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a>] -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="MLIR-AST-Builder.html#t:RegionBuilderT" title="MLIR.AST.Builder">RegionBuilderT</a> m () -&gt; m <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> <a href="src/MLIR.AST.Dialect.Generated.Vector.html#warp_execute_on_lane_0" class="link">Source</a> <a href="#v:warp_execute_on_lane_0" class="selflink">#</a></p><div class="doc"><p>A builder for <code>vector.warp_execute_on_lane_0</code>.</p></div></div><a href="#g:40" id="g:40"><h1>yield</h1></a><div class="doc"><p>&quot;vector.yield&quot; yields an SSA value from the Vector dialect op region and
  terminates the regions. The semantics of how the values are yielded is
  defined by the parent operation.
