--- a/mlir-hs-0.1.0.0/MLIR-AST-Dialect-Vector.html
+++ b/mlir-hs-0.1.0.0/MLIR-AST-Dialect-Vector.html
@@ -113,8 +113,9 @@ print %1
  and acc arguments. An indexing map attribute specifies a mapping from each
  iterator in the iterator type list, to each dimension of an N-D vector.</p><p>An optional kind attribute may be used to specify the combining function
  between the intermediate result and accumulator argument of rank K. This
- attribute can take the values add<em>mul</em>min<em>max for int</em>fp, and<em>or</em>xor for
- int only. The default is &quot;add&quot;.</p><p>Example:</p><pre>// Simple DOT product (K = 0).
+ attribute can take the values <code>add</code><em><code>mul</code></em><code>minsi</code><em><code>minui</code></em><code>maxsi</code>/<code>maxui</code>
+ <em><code>and</code></em><code>or</code><em><code>xor</code> for integers, and <code>add</code></em><code>mul</code><em><code>minf</code></em><code>maxf</code>/<code>minimumf</code>
+ /<code>maximumf</code> for floats. The default is <code>add</code>.</p><p>Example:</p><pre>// Simple DOT product (K = 0).
 #contraction_accesses = [
  affine_map&lt;(i) -&gt; (i)&gt;,
  affine_map&lt;(i) -&gt; (i)&gt;,
@@ -171,7 +172,7 @@ print %1
 #contraction_trait = {
   indexing_maps = #contraction_accesses,
   iterator_types = [&quot;reduction&quot;],
-  kind = #vector.kind&lt;max&gt;
+  kind = #vector.kind&lt;maxf&gt;
 }
 %6 = vector.contract #contraction_trait %0, %1, %2
   : vector&lt;10xf32&gt;, vector&lt;10xf32&gt; into f32
@@ -411,8 +412,9 @@ vector.maskedstore %base[%i, %j], %mask, %value
   { lhs_rows = 4: i32, lhs_columns = 16: i32 , rhs_columns = 3: i32 } :
   (vector&lt;64xf64&gt;, vector&lt;48xf64&gt;) -&gt; vector&lt;12xf64&gt;
 </pre></div><div class="top"><p class="src"><span class="keyword">pattern</span> <a id="v:Matmul" class="def">Matmul</a> :: <a href="MLIR-AST.html#t:Location" title="MLIR.AST">Location</a> -&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; operand -&gt; operand -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="MLIR-AST.html#t:AbstractOperation" title="MLIR.AST">AbstractOperation</a> operand <a href="src/MLIR.AST.Dialect.Generated.Vector.html#Matmul" class="link">Source</a> <a href="#v:Matmul" class="selflink">#</a></p><div class="doc"><p>A pattern for <code>vector.matrix_multiply</code>.</p></div></div><div class="top"><p class="src"><a id="v:matrix_multiply" class="def">matrix_multiply</a> :: <a href="MLIR-AST-Builder.html#t:MonadBlockBuilder" title="MLIR.AST.Builder">MonadBlockBuilder</a> m =&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; m <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> <a href="src/MLIR.AST.Dialect.Generated.Vector.html#matrix_multiply" class="link">Source</a> <a href="#v:matrix_multiply" class="selflink">#</a></p><div class="doc"><p>A builder for <code>vector.matrix_multiply</code>.</p></div></div><a href="#g:23" id="g:23"><h1>multi_reduction</h1></a><div class="doc"><p>Reduces an n-D vector into an (n-k)-D vector (or a scalar when k == n)
- using the given operation (add<em>mul</em>min<em>max for int</em>fp and and<em>or</em>xor for
- int only).
+ using the given operation: <code>add</code><em><code>mul</code></em><code>minsi</code><em><code>minui</code></em><code>maxsi</code>/<code>maxui</code>
+ <em><code>and</code></em><code>or</code><em><code>xor</code> for integers, and <code>add</code></em><code>mul</code><em><code>minf</code></em><code>maxf</code>/<code>minimumf</code>
+ /<code>maximumf</code> for floats.
  Takes an initial accumulator operand.</p><p>Example:</p><pre>%1 = vector.multi_reduction &lt;add&gt;, %0, %acc0 [1, 3] :
   vector&lt;4x8x16x32xf32&gt; into vector&lt;4x16xf32&gt;
 %2 = vector.multi_reduction &lt;add&gt;, %1, %acc1 [0, 1] :
@@ -435,18 +437,16 @@ vector.maskedstore %base[%i, %j], %mask, %value
  scenario for floating-point arguments, the rounding mode is enforced
  by guaranteeing that a fused-multiply add operation is emitted. When
  lowered to the LLVMIR dialect, this form emits <code>llvm.intr.fma</code>, which
- is guaranteed to lower to actual <code>fma</code> instructions on x86.</p><p>An optional kind attribute may be specified to be add<em>mul</em>min/max
- for int<em>fp, and and</em>or/xor for int only. The default is &quot;add&quot;, in which
- case the operation returns a fused multiply-add. In other cases it returns
- a multiply followed by the appropriate operation (for example, a compare and
- select for &quot;max&quot;).</p><p>Example:</p><pre>%2 = vector.outerproduct %0, %1: vector&lt;4xf32&gt;, vector&lt;8xf32&gt;
+ is guaranteed to lower to actual <code>fma</code> instructions on x86.</p><p>An optional kind attribute may be specified to be: <code>add</code><em><code>mul</code></em><code>minsi</code>
+ <em><code>minui</code></em><code>maxsi</code><em><code>maxui</code></em><code>and</code><em><code>or</code></em><code>xor</code> for integers, and <code>add</code>/<code>mul</code>
+ <em><code>minf</code></em><code>maxf</code><em><code>minimumf</code></em><code>maximumf</code> for floats. The default is <code>add</code>.</p><p>Example:</p><pre>%2 = vector.outerproduct %0, %1: vector&lt;4xf32&gt;, vector&lt;8xf32&gt;
 return %2: vector&lt;4x8xf32&gt;
 
 %3 = vector.outerproduct %0, %1, %2:
   vector&lt;4xf32&gt;, vector&lt;8xf32&gt;, vector&lt;4x8xf32&gt;
 return %3: vector&lt;4x8xf32&gt;
 
-%4 = vector.outerproduct %0, %1, %2 {kind = #vector.kind&lt;max&gt;}:
+%4 = vector.outerproduct %0, %1, %2 {kind = #vector.kind&lt;maxf&gt;}:
   vector&lt;4xf32&gt;, vector&lt;8xf32&gt;, vector&lt;4x8xf32&gt;
 return %3: vector&lt;4x8xf32&gt;
 
@@ -468,7 +468,8 @@ vector.print %v : vector&lt;4xf32&gt;
 </pre><p>Additionally, to aid with debugging and testing <code>vector.print</code> can also
  print constant strings:</p><pre>vector.print str &quot;Hello, World!&quot;
 </pre></div><div class="top"><p class="src"><a id="v:print" class="def">print</a> :: <a href="MLIR-AST-Builder.html#t:MonadBlockBuilder" title="MLIR.AST.Builder">MonadBlockBuilder</a> m =&gt; <a href="../base-4.14.1.0/Data-Maybe.html#t:Maybe" title="Data.Maybe">Maybe</a> <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; m () <a href="src/MLIR.AST.Dialect.Generated.Vector.html#print" class="link">Source</a> <a href="#v:print" class="selflink">#</a></p><div class="doc"><p>A builder for <code>vector.print</code>.</p></div></div><a href="#g:26" id="g:26"><h1>reduction</h1></a><div class="doc"><p>Reduces an 1-D vector &quot;horizontally&quot; into a scalar using the given
- operation (add<em>mul</em>min<em>max for int</em>fp and and<em>or</em>xor for int only).
+ operation: <code>add</code><em><code>mul</code></em><code>minsi</code><em><code>minui</code></em><code>maxsi</code><em><code>maxui</code></em><code>and</code><em><code>or</code></em><code>xor</code> for
+ integers, and <code>add</code><em><code>mul</code></em><code>minf</code><em><code>maxf</code></em><code>minimumf</code>/<code>maximumf</code> for floats.
  Reductions also allow an optional fused accumulator.</p><p>Note that these operations are restricted to 1-D vectors to remain
  close to the corresponding LLVM intrinsics:</p><p><a href="http://llvm.org/docs/LangRef.html\#vector-reduction-intrinsics">http://llvm.org/docs/LangRef.html\#vector-reduction-intrinsics</a></p><p>Example:</p><pre>%1 = vector.reduction &lt;add&gt;, %0 : vector&lt;16xf32&gt; into f32
 
@@ -533,10 +534,10 @@ vector.print %v : vector&lt;4xf32&gt;
  %2 = vector.scalable.insert %0, %1[5] : vector&lt;4xf32&gt; into vector&lt;[16]xf32&gt;
  </code></p></div><div class="top"><p class="src"><span class="keyword">pattern</span> <a id="v:ScalableInsert" class="def">ScalableInsert</a> :: <a href="MLIR-AST.html#t:Location" title="MLIR.AST">Location</a> -&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; operand -&gt; operand -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; <a href="MLIR-AST.html#t:AbstractOperation" title="MLIR.AST">AbstractOperation</a> operand <a href="src/MLIR.AST.Dialect.Generated.Vector.html#ScalableInsert" class="link">Source</a> <a href="#v:ScalableInsert" class="selflink">#</a></p><div class="doc"><p>A pattern for <code>vector.scalable.insert</code>.</p></div></div><div class="top"><p class="src"><a id="v:scalable_insert" class="def">scalable_insert</a> :: <a href="MLIR-AST-Builder.html#t:MonadBlockBuilder" title="MLIR.AST.Builder">MonadBlockBuilder</a> m =&gt; <a href="MLIR-AST.html#t:Type" title="MLIR.AST">Type</a> -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> -&gt; <a href="../base-4.14.1.0/Data-Int.html#t:Int" title="Data.Int">Int</a> -&gt; m <a href="MLIR-AST-Builder.html#t:Value" title="MLIR.AST.Builder">Value</a> <a href="src/MLIR.AST.Dialect.Generated.Vector.html#scalable_insert" class="link">Source</a> <a href="#v:scalable_insert" class="selflink">#</a></p><div class="doc"><p>A builder for <code>vector.scalable.insert</code>.</p></div></div><a href="#g:30" id="g:30"><h1>scan</h1></a><div class="doc"><p>Performs an inclusive/exclusive scan on an n-D vector along a single
  dimension returning an n-D result vector using the given
- operation (add<em>mul</em>min<em>max for int</em>fp and and<em>or</em>xor for
- int only) and a specified value for the initial value. The operator
- returns the result of scan as well as the result of the last
- reduction in the scan.</p><p>Example:</p><pre>%1:2 = vector.scan &lt;add&gt;, %0, %acc {inclusive = false, reduction_dim = 1 : i64} :
+ operation (<code>add</code><em><code>mul</code></em><code>minsi</code><em><code>minui</code></em><code>maxsi</code><em><code>maxui</code></em><code>and</code><em><code>or</code></em><code>xor</code> for
+ integers, and <code>add</code><em><code>mul</code></em><code>minf</code><em><code>maxf</code></em><code>minimumf</code>/<code>maximumf</code> for floats),
+ and a specified value for the initial value. The operator returns the
+ result of scan as well as the result of the last reduction in the scan.</p><p>Example:</p><pre>%1:2 = vector.scan &lt;add&gt;, %0, %acc {inclusive = false, reduction_dim = 1 : i64} :
   vector&lt;4x8x16x32xf32&gt;, vector&lt;4x16x32xf32&gt;
 </pre></div><a href="#g:31" id="g:31"><h1>scatter</h1></a><div class="doc"><p>The scatter operation stores elements from a 1-D vector into memory as
  defined by a base with indices and an additional 1-D index vector, but
